# 马士兵go/bigDJ/backend/customer/api/customer/customer_grpc.pb.go
@@ -22,6 +22,7 @@ const (
 	Customer_GetVerifyCode_FullMethodName = "/api.customer.Customer/GetVerifyCode"
 	Customer_Login_FullMethodName         = "/api.customer.Customer/Login"
 	Customer_Logout_FullMethodName        = "/api.customer.Customer/Logout"
+	Customer_EstimatePrice_FullMethodName = "/api.customer.Customer/EstimatePrice"
 )
 
 // CustomerClient is the client API for Customer service.
@@ -31,6 +32,7 @@ type CustomerClient interface {
 	GetVerifyCode(ctx context.Context, in *GetVerifyCodeReq, opts ...grpc.CallOption) (*GetVerifyCodeResp, error)
 	Login(ctx context.Context, in *LoginReq, opts ...grpc.CallOption) (*LoginResp, error)
 	Logout(ctx context.Context, in *LogoutReq, opts ...grpc.CallOption) (*LogoutResp, error)
+	EstimatePrice(ctx context.Context, in *EstimatePriceReq, opts ...grpc.CallOption) (*EstimatePriceResp, error)
 }
 
 type customerClient struct {
@@ -71,6 +73,16 @@ func (c *customerClient) Logout(ctx context.Context, in *LogoutReq, opts ...grpc
 	return out, nil
 }
 
+func (c *customerClient) EstimatePrice(ctx context.Context, in *EstimatePriceReq, opts ...grpc.CallOption) (*EstimatePriceResp, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(EstimatePriceResp)
+	err := c.cc.Invoke(ctx, Customer_EstimatePrice_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // CustomerServer is the server API for Customer service.
 // All implementations must embed UnimplementedCustomerServer
 // for forward compatibility.
@@ -78,6 +90,7 @@ type CustomerServer interface {
 	GetVerifyCode(context.Context, *GetVerifyCodeReq) (*GetVerifyCodeResp, error)
 	Login(context.Context, *LoginReq) (*LoginResp, error)
 	Logout(context.Context, *LogoutReq) (*LogoutResp, error)
+	EstimatePrice(context.Context, *EstimatePriceReq) (*EstimatePriceResp, error)
 	mustEmbedUnimplementedCustomerServer()
 }
 
@@ -96,6 +109,9 @@ func (UnimplementedCustomerServer) Login(context.Context, *LoginReq) (*LoginResp
 }
 func (UnimplementedCustomerServer) Logout(context.Context, *LogoutReq) (*LogoutResp, error) {
 	return nil, status.Error(codes.Unimplemented, "method Logout not implemented")
+}
+func (UnimplementedCustomerServer) EstimatePrice(context.Context, *EstimatePriceReq) (*EstimatePriceResp, error) {
+	return nil, status.Error(codes.Unimplemented, "method EstimatePrice not implemented")
 }
 func (UnimplementedCustomerServer) mustEmbedUnimplementedCustomerServer() {}
 func (UnimplementedCustomerServer) testEmbeddedByValue()                  {}
@@ -172,6 +188,24 @@ func _Customer_Logout_Handler(srv interface{}, ctx context.Context, dec func(int
 	return interceptor(ctx, in, info, handler)
 }
 
+func _Customer_EstimatePrice_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(EstimatePriceReq)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(CustomerServer).EstimatePrice(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Customer_EstimatePrice_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(CustomerServer).EstimatePrice(ctx, req.(*EstimatePriceReq))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // Customer_ServiceDesc is the grpc.ServiceDesc for Customer service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -190,6 +224,10 @@ var Customer_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "Logout",
 			Handler:    _Customer_Logout_Handler,
+		},
+		{
+			MethodName: "EstimatePrice",
+			Handler:    _Customer_EstimatePrice_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
