# 马士兵go/bigDJ/backend/customer/api/valuation/valuation.pb.go
@@ -1,0 +1,200 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// versions:
+// 	protoc-gen-go v1.36.11
+// 	protoc        v6.33.0
+// source: api/valuation/valuation.proto
+
+package valuation
+
+import (
+	protoreflect "google.golang.org/protobuf/reflect/protoreflect"
+	protoimpl "google.golang.org/protobuf/runtime/protoimpl"
+	reflect "reflect"
+	sync "sync"
+	unsafe "unsafe"
+)
+
+const (
+	// Verify that this generated code is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(20 - protoimpl.MinVersion)
+	// Verify that runtime/protoimpl is sufficiently up-to-date.
+	_ = protoimpl.EnforceVersion(protoimpl.MaxVersion - 20)
+)
+
+type GetEstimatePriceReq struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Origin        string                 `protobuf:"bytes,1,opt,name=origin,proto3" json:"origin,omitempty"`
+	Destination   string                 `protobuf:"bytes,2,opt,name=destination,proto3" json:"destination,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *GetEstimatePriceReq) Reset() {
+	*x = GetEstimatePriceReq{}
+	mi := &file_api_valuation_valuation_proto_msgTypes[0]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *GetEstimatePriceReq) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetEstimatePriceReq) ProtoMessage() {}
+
+func (x *GetEstimatePriceReq) ProtoReflect() protoreflect.Message {
+	mi := &file_api_valuation_valuation_proto_msgTypes[0]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetEstimatePriceReq.ProtoReflect.Descriptor instead.
+func (*GetEstimatePriceReq) Descriptor() ([]byte, []int) {
+	return file_api_valuation_valuation_proto_rawDescGZIP(), []int{0}
+}
+
+func (x *GetEstimatePriceReq) GetOrigin() string {
+	if x != nil {
+		return x.Origin
+	}
+	return ""
+}
+
+func (x *GetEstimatePriceReq) GetDestination() string {
+	if x != nil {
+		return x.Destination
+	}
+	return ""
+}
+
+type GetEstimatePriceReply struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Origin        string                 `protobuf:"bytes,1,opt,name=origin,proto3" json:"origin,omitempty"`
+	Destination   string                 `protobuf:"bytes,2,opt,name=destination,proto3" json:"destination,omitempty"`
+	Price         int64                  `protobuf:"varint,3,opt,name=price,proto3" json:"price,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *GetEstimatePriceReply) Reset() {
+	*x = GetEstimatePriceReply{}
+	mi := &file_api_valuation_valuation_proto_msgTypes[1]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *GetEstimatePriceReply) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*GetEstimatePriceReply) ProtoMessage() {}
+
+func (x *GetEstimatePriceReply) ProtoReflect() protoreflect.Message {
+	mi := &file_api_valuation_valuation_proto_msgTypes[1]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use GetEstimatePriceReply.ProtoReflect.Descriptor instead.
+func (*GetEstimatePriceReply) Descriptor() ([]byte, []int) {
+	return file_api_valuation_valuation_proto_rawDescGZIP(), []int{1}
+}
+
+func (x *GetEstimatePriceReply) GetOrigin() string {
+	if x != nil {
+		return x.Origin
+	}
+	return ""
+}
+
+func (x *GetEstimatePriceReply) GetDestination() string {
+	if x != nil {
+		return x.Destination
+	}
+	return ""
+}
+
+func (x *GetEstimatePriceReply) GetPrice() int64 {
+	if x != nil {
+		return x.Price
+	}
+	return 0
+}
+
+var File_api_valuation_valuation_proto protoreflect.FileDescriptor
+
+const file_api_valuation_valuation_proto_rawDesc = "" +
+	"\n" +
+	"\x1dapi/valuation/valuation.proto\x12\rapi.valuation\"O\n" +
+	"\x13GetEstimatePriceReq\x12\x16\n" +
+	"\x06origin\x18\x01 \x01(\tR\x06origin\x12 \n" +
+	"\vdestination\x18\x02 \x01(\tR\vdestination\"g\n" +
+	"\x15GetEstimatePriceReply\x12\x16\n" +
+	"\x06origin\x18\x01 \x01(\tR\x06origin\x12 \n" +
+	"\vdestination\x18\x02 \x01(\tR\vdestination\x12\x14\n" +
+	"\x05price\x18\x03 \x01(\x03R\x05price2i\n" +
+	"\tValuation\x12\\\n" +
+	"\x10GetEstimatePrice\x12\".api.valuation.GetEstimatePriceReq\x1a$.api.valuation.GetEstimatePriceReplyB\"Z customer/api/valuation;valuationb\x06proto3"
+
+var (
+	file_api_valuation_valuation_proto_rawDescOnce sync.Once
+	file_api_valuation_valuation_proto_rawDescData []byte
+)
+
+func file_api_valuation_valuation_proto_rawDescGZIP() []byte {
+	file_api_valuation_valuation_proto_rawDescOnce.Do(func() {
+		file_api_valuation_valuation_proto_rawDescData = protoimpl.X.CompressGZIP(unsafe.Slice(unsafe.StringData(file_api_valuation_valuation_proto_rawDesc), len(file_api_valuation_valuation_proto_rawDesc)))
+	})
+	return file_api_valuation_valuation_proto_rawDescData
+}
+
+var file_api_valuation_valuation_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
+var file_api_valuation_valuation_proto_goTypes = []any{
+	(*GetEstimatePriceReq)(nil),   // 0: api.valuation.GetEstimatePriceReq
+	(*GetEstimatePriceReply)(nil), // 1: api.valuation.GetEstimatePriceReply
+}
+var file_api_valuation_valuation_proto_depIdxs = []int32{
+	0, // 0: api.valuation.Valuation.GetEstimatePrice:input_type -> api.valuation.GetEstimatePriceReq
+	1, // 1: api.valuation.Valuation.GetEstimatePrice:output_type -> api.valuation.GetEstimatePriceReply
+	1, // [1:2] is the sub-list for method output_type
+	0, // [0:1] is the sub-list for method input_type
+	0, // [0:0] is the sub-list for extension type_name
+	0, // [0:0] is the sub-list for extension extendee
+	0, // [0:0] is the sub-list for field type_name
+}
+
+func init() { file_api_valuation_valuation_proto_init() }
+func file_api_valuation_valuation_proto_init() {
+	if File_api_valuation_valuation_proto != nil {
+		return
+	}
+	type x struct{}
+	out := protoimpl.TypeBuilder{
+		File: protoimpl.DescBuilder{
+			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
+			RawDescriptor: unsafe.Slice(unsafe.StringData(file_api_valuation_valuation_proto_rawDesc), len(file_api_valuation_valuation_proto_rawDesc)),
+			NumEnums:      0,
+			NumMessages:   2,
+			NumExtensions: 0,
+			NumServices:   1,
+		},
+		GoTypes:           file_api_valuation_valuation_proto_goTypes,
+		DependencyIndexes: file_api_valuation_valuation_proto_depIdxs,
+		MessageInfos:      file_api_valuation_valuation_proto_msgTypes,
+	}.Build()
+	File_api_valuation_valuation_proto = out.File
+	file_api_valuation_valuation_proto_goTypes = nil
+	file_api_valuation_valuation_proto_depIdxs = nil
+}
