# 马士兵go/bigDJ/backend/customer/openapi.yaml
@@ -6,6 +6,33 @@ info:
     title: Customer API
     version: 0.0.1
 paths:
+    /customer/estimate-price:
+        get:
+            tags:
+                - Customer
+            operationId: Customer_EstimatePrice
+            parameters:
+                - name: origin
+                  in: query
+                  schema:
+                    type: string
+                - name: destination
+                  in: query
+                  schema:
+                    type: string
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/EstimatePriceResp'
+                default:
+                    description: Default error response
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Status'
     /customer/get-verify-code/{telephone}:
         get:
             tags:
@@ -74,6 +101,19 @@ paths:
                                 $ref: '#/components/schemas/Status'
 components:
     schemas:
+        EstimatePriceResp:
+            type: object
+            properties:
+                code:
+                    type: string
+                message:
+                    type: string
+                origin:
+                    type: string
+                destination:
+                    type: string
+                price:
+                    type: string
         GetVerifyCodeResp:
             type: object
             properties:
